force-app/main/default/objects/ARF_Cash_App_Result__c/ARF_Cash_App_Result__c.object-meta.xml
<CustomObject>
    <label>Cash Application Result</label>
    <nameField><label>Result Number</label><displayFormat>CAR-{0000}</displayFormat><type>AutoNumber</type></nameField>
    <pluralLabel>Cash Application Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>