force-app/main/default/objects/ARF_Cash_App_Result__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Lookup</type>
    <referenceTo>ARF_Invoice__c</referenceTo>
    <relationshipName>Cash_App_Results</relationshipName>
    <relationshipLabel>Cash App Results</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>