force-app/main/default/objects/ARF_Cash_App_Result__c/fields/Match_Details__c.field-meta.xml
<CustomField>
    <fullName>Match_Details__c</fullName>
    <label>Match Details</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>