force-app/main/default/objects/ARF_Cash_App_Result__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <type>Lookup</type>
    <referenceTo>ARF_Payment__c</referenceTo>
    <relationshipName>Cash_App_Results</relationshipName>
    <relationshipLabel>Cash App Results</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>