force-app/main/default/objects/ARF_Cash_App_Result__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Cash_App_Results_Reviewed</relationshipName>
    <relationshipLabel>Cash App Results (Reviewed)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>