force-app/main/default/objects/ARF_Cash_App_Result__c/fields/Rule_Used__c.field-meta.xml
<CustomField>
    <fullName>Rule_Used__c</fullName>
    <label>Rule Used</label>
    <type>Text</type>
    <length>255</length>
</CustomField>