force-app/main/default/objects/ARF_Cash_App_Result__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Auto_Applied</fullName><default>false</default><label>Auto Applied</label></value>
            <value><fullName>Pending_Review</fullName><default>false</default><label>Pending Review</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Manual</fullName><default>false</default><label>Manual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>